# Terminal

c#/: IntelliPayTerminalWrapper.cs  IntelliPayTerminalWrapper.csproj  IntelliPayTerminalWrapper.sln
c++/: CMakeLists.txt  terminal.cpp  terminal.h
c++/serial/: serial.cpp  serial.h
c++/serial/impl/: unix.cpp  unix.h  win.cpp  win.h
c++/serial/impl/list_ports/: list_ports_linux.cpp  list_ports_osx.cpp  list_ports_win.cpp
examples/c++/: basic.cpp
kotlin/src/: Terminal.kt
python/: Terminal.py
python/IntelliPay/: Terminal.py
